--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,8 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
-
-h1{
-    color: blue;
+h1 {
+  color: green;
 }
+
+h2 {
+  color: green;
+}
+/*# sourceMappingURL=style.css.map */
