--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,7 @@
 h1 {
-  color: green;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-weight: 800;
+  color: aqua;
 }
 
 h2 {
