--- a/style/style.scss
+++ b/style/style.scss
@@ -5,20 +5,23 @@ $maincolor : green;
 @mixin  headerStyle {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: 800;
-    color: aqua
+    color: rgb(38, 0, 255)
     
 }
-
-
-
-
-h1{
+//forLoop 
+@for $i from 1 to 3{
+    h#{$i}{
+        @include headerStyle;
+}
+    }
     
-    @include headerStyle;
-}
-h2{
-    color: $maincolor;
-}
+
+
+
+
+
+
+
 
 //extend usage
 .button{
