--- a/style/style.css
+++ b/style/style.css
@@ -10,6 +10,13 @@ h2 {
   color: #2600ff;
 }
 
+/* nav{
+    ul{
+        li{
+            
+        }
+    }
+ } */
 .button, .secondButton {
   background-color: aquamarine;
 }
