--- a/style/style.scss
+++ b/style/style.scss
@@ -14,7 +14,15 @@ $maincolor : green;
         @include headerStyle;
 }
     }
-    
+//nesting items styling sample
+/* nav{
+    ul{
+        li{
+            
+        }
+    }
+ } */
+
 
 
 
